# magisk-example-project

./: .gitignore  README.md
magisk-module/: customize.sh  module.prop
zygisk-native-lib/: CMakeLists.txt
zygisk-native-lib/src/: main.cpp
